--- a/Rapport/diapo.tex
+++ b/Rapport/diapo.tex
@@ -135,13 +135,6 @@
 
 
 
-
-
-
-
-
-
-
 \section{Présentation des programme}
 \subsection{Diffie-Hellman}
 \begin{frame}
@@ -155,6 +148,64 @@
 	\pause
 
 \end{frame}
+
+\section{Prolongements}
+\subsection{Choix du protocole}
+\begin{frame}
+	\frametitle{Choix du protocole}
+	\begin{block}{Quel protocole de partage de clé choisir ?}
+	 \begin{itemize}
+	  \item Diffie-Hellman est un protocole d'échange de clé tout à fait adapté dans notre cas.
+	  \item Chiffrement par transposition est un protocole de chiffrement de message à partir d'une clé. Plus adapté à l'échange de message cryptés
+	 \end{itemize}
+	\end{block}
+\end{frame}
+
+\subsection{Utilisation des protocoles}
+\begin{frame}
+	\frametitle{Utilisation des protocoles}
+	\begin{block}{Diffie-Hellman}
+		Diffie-Hellman à l'avantage de ne demander aucun prérequis pour être mis en place.
+		Il est utilisé pour échanger des clés de cryptage.
+	\end{block}
+	\begin{block}{Chiffrement par transposition}
+		Besoin d'échanger une clé secrète pour permettre le cryptage et le décryptage des messages envoyés.
+	\end{block}
+
+\end{frame}
+
+\subsection{Attaque de l'homme du milieu}
+\begin{frame}
+	\frametitle{Attaque de l'homme du milieu}
+	\begin{block}{Principe et fonctionnement}
+	 
+	\end{block}
+\end{frame}
+
+\subsection{Logarithme discret}
+\begin{frame}
+	\frametitle{Logarithme discret}
+	\begin{block}{Problème et lien avec Diffie-Hellman}
+	 
+	\end{block}
+\end{frame}
+
+\subsection{Baby step giant step}
+\begin{frame}
+	\frametitle{Baby step giant step}
+	\begin{block}{Utilisation de l'algorithme}
+	 
+	\end{block}
+\end{frame}
+
+\subsection{Attaque du chiffrement par transposition}
+\begin{frame}
+	\frametitle{Attaque du chiffrement par transposition}
+	\begin{block}{Proposition de protocole}
+	 
+	\end{block}
+\end{frame}
+
 
 
 \section{Résultats}
