--- a/Rapport/diapo.tex
+++ b/Rapport/diapo.tex
@@ -136,17 +136,8 @@
 
 
 \section{Présentation des programme}
-\subsection{Diffie-Hellman}
 \begin{frame}
-	\frametitle{Diffie-Hellman} 
-	\pause
-
-\end{frame}
-\subsection{Chiffrement par transposition}
-\begin{frame}
-	\frametitle{Chiffrement par transposition} 
-	\pause
-
+	\frametitle{Présentation des programme}
 \end{frame}
 
 \section{Prolongements}
