--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -120,12 +120,12 @@ Par la suite, on pourra déterminer la longueur de la clé et ainsi découper chaqu
 \section{Journal de bord}
 \subsection{Séance 1}
 Lors de la première séance, notre choix s'est immédiatement tourné vers le sujet de cryptographie qui nous intéressait tout particulièrement.
-Après avoir pris connaissance du sujet, nous avons immédiatement entamé les recherches concernant l'échange de clé de Diffie-Hellman afin de comprendre son principe et commencer un début d'implémentation simple en java.
+Après avoir pris connaissance du sujet, nous avons immédiatement entamé les recherches concernant l'échange de clé de Diffie-Hellman afin de comprendre son principe et commencer un début d'implémentation simple en java. Les premières recherches portèrent notament sur le choix des paramètres à choisir pour l'échange de clef.
 
 Nous avons pu poser quelques questions relatives au sujet afin de bien le comprendre et orienter nos travaux dans ce sens.
 
 \subsection{Séance 2}
-Durant cette séance, nous avons principalement continué nos recherches toujours axées sur l'échange de clé de Diffie-Hellman mais également sur le chiffrement par transposition.
+Durant cette séance, nous avons principalement continué nos recherches toujours axées sur l'échange de clé de Diffie-Hellman mais également sur le chiffrement par transposition. La traduction de celui-ci en algorithme n'as pas été aussi aisée que prévu, la plupart des textes l'expliquant pour le faire à la main et non de manière informatique.
 Un début de compte-rendu à commencé à être rédigé ainsi que le projet java final avec lequel les programmes seront implémentés a été créé.
 
 \subsection{Séance 3}
@@ -148,7 +148,7 @@ Lors de l'implémentation de l'algorithme de Diffi-Hellman, nous avons eu différe
 
 \vspace{0.5cm}
 
-Dans notre cas, nous avons pris $g = 2$, en effet, même si celui-ci est un générateur à proprement parlé dans $p$, il permet de générer un nombre de valeurs bien assez grand pour assurer la pérennité de la clé de chiffrement.
+Dans notre cas, nous avons pris $g = 2$, en effet, même si celui-ci n'est pas nécéssairement générateur dans Z/nZ , il permet de générer un nombre de valeurs bien assez grand dans Z/nZ pour assurer la pérennité de la clé de chiffrement.
 
 \vspace{0.5cm}
 
